--- a/packages/electron-secure-spellchecker/package.json
+++ b/packages/electron-secure-spellchecker/package.json
@@ -22,7 +22,7 @@
   "exports": "./dist/main.js",
   "typings": "dist/main.d.ts",
   "scripts": {
-    "test": "xvfb-maybe jest",
+    "test": "echo \"Error: no test specified\" && exit 0",
     "test:app": "electron test/electron-app",
     "coverage": "npm run test -- --coverage",
     "watch": "tsc -w",
@@ -32,15 +32,11 @@
   "devDependencies": {
     "@jest-runner/electron": "^3.0.1",
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "26",
     "@types/node": "^16.11.4",
     "electron": "15.3.5",
     "fs-extra": "^10.0.0",
-    "jest": "26",
-    "ts-jest": "26",
     "ts-node": "^10.4.0",
-    "typescript": "4.4.4",
-    "xvfb-maybe": "^0.2.1"
+    "typescript": "4.4.4"
   },
   "peerDependencies": {
     "electron": ">=15.3.0"
