feat: add electron-clear-data package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
   "references": [
     {
       "path": "packages/electron-secure-spellchecker"
+    },
+    {
+      "path": "packages/electron-clear-data"
     }
   ],
   "exclude": [
